--- a/config/locales/devise.de.yml
+++ b/config/locales/devise.de.yml
@@ -1,36 +1,36 @@
-en:
+de:
   errors:
     messages:
-      not_found: "not found"
-      already_confirmed: "was already confirmed"
-      not_locked: "was not locked"
+      not_found: "nicht gefunden"
+      already_confirmed: "bereits best&auml;tigt"
+      not_locked: "war nicht gesperrt"
 
   devise:
     failure:
-      unauthenticated: 'You need to sign in or sign up before continuing.'
-      unconfirmed: 'You have to confirm your account before continuing.'
-      locked: 'Your account is locked.'
-      invalid: 'Invalid email or password.'
-      invalid_token: 'Invalid authentication token.'
-      timeout: 'Your session expired, please sign in again to continue.'
-      inactive: 'Your account was not activated yet.'
+      unauthenticated: 'Zum Weitermachen, bitte einloggen oder registrieren.'
+      unconfirmed: 'Zum Weitermachen, bitte vorher Deinen Account best&auml;tigen.'
+      locked: 'Dein Account ist gesperrt.'
+      invalid: 'Email oder Passwort falsch geschrieben.'
+      invalid_token: 'Ungültiger Authentifizierungs-Token.'
+      timeout: 'Deine Session ist abgelaufen, bitte logg Dich erneut ein.'
+      inactive: 'Dein Account ist noch nicht aktiviert.'
     sessions:
-      signed_in: 'Signed in successfully.'
-      signed_out: 'Signed out successfully.'
+      signed_in: 'Erfolgreich eingeloggt.'
+      signed_out: 'Erfolgreich ausgeloggt.'
     passwords:
-      send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
-      updated: 'Your password was changed successfully. You are now signed in.'
+      send_instructions: 'Du bekommst gleich eine Email von uns mit Informationen, wie Du Dein Passwort ändern kannst.'
+      updated: 'Dein Passwort wurde erfolgreich ge&auml;ndert. Du bist jetzt eingeloggt.'
     confirmations:
-      send_instructions: 'You will receive an email with instructions about how to confirm your account in a few minutes.'
-      confirmed: 'Your account was successfully confirmed. You are now signed in.'
+      send_instructions: 'Du erh&auml;lst in K&uuml;rze eine Email mit Informationen zum Best&auml;tigen Deines Accounts von uns.'
+      confirmed: 'Dein Account wurde erfolgreich best&auml;tigt. Du bist bereits eingeloggt.'
     registrations:
-      signed_up: 'You have signed up successfully.'
-      updated: 'You updated your account successfully.'
-      destroyed: 'Bye! Your account was successfully cancelled. We hope to see you again soon.'
+      signed_up: 'Du hast Dich erfolgreich registriert.'
+      updated: '&Auml;nderungen gespeichert.'
+      destroyed: 'Dein Account wurde gel&ouml;scht'
     unlocks:
-      send_instructions: 'You will receive an email with instructions about how to unlock your account in a few minutes.'
-      unlocked: 'Your account was successfully unlocked. You are now signed in.'
+      send_instructions: 'Du bekommst gleich eine Email von uns mit Informationen, wie Du Dein Passwort entsperren kannst.'
+      unlocked: 'Dein Account wurde erfolgreich entsperrt. Du bist bereits eingeloggt.'
     mailer:
-      confirmation_instructions: 'Confirmation instructions'
-      reset_password_instructions: 'Reset password instructions'
-      unlock_instructions: 'Unlock Instructions'
+      confirmation_instructions: 'Account best&auml;tigen'
+      reset_password_instructions: 'Passwort zur&uuml;cksetzen'
+      unlock_instructions: 'Entsperren des Accounts'
