utf-8-encoding rails 3, html_safe in views

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -167,7 +167,8 @@ de:
   between: "zwischen"
   remove: "l&ouml;schen"
   sortBy: "Sortieren nach"
-  searchIn: "Suchen in"
+  searchIn: "Suchen in"    
+  searchOptions: "Suchoptionen"
   help: "Hilfe"
   about: "&Uuml;ber uns"
   options: "Optionen"
