--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -168,6 +168,7 @@ en:
   remove: "remove"
   sortBy: "Sort by"
   searchIn: "Search in"
+  searchOptions: "Search options"
   help: "Help"
   about: "About"
   options: "Options"
