--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -21,7 +21,7 @@ de:
 
   time:
     formats:
-      default: "%A, %d. %B %Y, %H:%M Uhr"
+      default: "%a, %d. %B %Y, %H:%M Uhr"
       time: "%H:%M"
       short: "%e. %B, %H:%M Uhr"
       long: "%A, %d. %B %Y, %H:%M Uhr"
