--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -689,45 +689,45 @@ de:
     
   ## activemodel
   
-  activerecord:
-    errors:
-      template:
-        header:
-          one:    "1 Fehler beim speichern von %{model}"
-          other:  "%{count} Fehler beim speichern von %{model}"
-        # The variable :count is also available
-        body: "Hoppla, du hast das Formluar nicht ganz richtig ausgef&uuml;llt."
-      messages:
-        inclusion: "ist nicht in der Liste inkludiert"
-        exclusion: "ist reserviert"
-        invalid: "ist ung&uuml;ltig"
-        confirmation: "stimmt nicht &uuml;berein"
-        accepted: "muss akzeptiert werden"
-        empty: "darf nicht leer sein"
-        blank: "darf nicht leer sein"
-        too_long: "ist zu lang (maximal %{count} Buchstaben)"
-        too_short: "ist zu kurz (mindestens %{count} Buchstaben)"
-        wrong_length: "hat die falsche L&auml;nge (sollte %{count} Buchstaben haben)"
-        taken: "ist bereits vergeben."
-        not_a_number: "ist keine Nummer"
-        not_an_integer: "ist keine Zahl"
-        greater_than: "muss gr&ouml;sser sein als %{count}"
-        greater_than_or_equal_to: "muss gr&ouml;sser oder gleich sein als %{count}"
-        equal_to: "muss gleich sein als %{count}"
-        less_than: "muss weniger sein als %{count}"
-        less_than_or_equal_to: "muss weniger oder gleich sein als %{count}"
-        odd: "muss ungerade sein"
-        even: "muss gerade sein"
-        record_invalid: "&Uuml;berpr&uuml;fung fehlgeschlagen: %{errors}"
-        invalid_date: "kein g&uuml;ltiges Datum"
-        invalid_time: "keine g&uuml;ltige Zeit"
-        invalid_datetime: "ung&uuml;ltig"
-        is_at: "muss genau %{restriction} sein"
-        before: "muss vor %{restriction} sein"
-        on_or_before: "muss gleich oder vor %{restriction} sein"
-        after: "muss anch %{restriction} sein"
-        on_or_after: "muss gleich oder nach %{restriction} sein"
-        between: "muss zwischen %{earliest} undnd %{latest} sein"
+ # activerecord:
+  errors:
+    template:
+      header:
+        one:    "1 Fehler beim speichern von %{model}"
+        other:  "%{count} Fehler beim speichern von %{model}"
+      # The variable :count is also available
+      body: "Hoppla, du hast das Formluar nicht ganz richtig ausgef&uuml;llt:"
+    messages:
+      inclusion: "ist nicht in der Liste inkludiert"
+      exclusion: "ist reserviert"
+      invalid: "ist ung&uuml;ltig"
+      confirmation: "stimmt nicht &uuml;berein"
+      accepted: "muss akzeptiert werden"
+      empty: "darf nicht leer sein"
+      blank: "darf nicht leer sein"
+      too_long: "ist zu lang (maximal %{count} Buchstaben)"
+      too_short: "ist zu kurz (mindestens %{count} Buchstaben)"
+      wrong_length: "hat die falsche L&auml;nge (sollte %{count} Buchstaben haben)"
+      taken: "ist bereits vergeben."
+      not_a_number: "ist keine Nummer"
+      not_an_integer: "ist keine Zahl"
+      greater_than: "muss gr&ouml;sser sein als %{count}"
+      greater_than_or_equal_to: "muss gr&ouml;sser oder gleich sein als %{count}"
+      equal_to: "muss gleich sein als %{count}"
+      less_than: "muss weniger sein als %{count}"
+      less_than_or_equal_to: "muss weniger oder gleich sein als %{count}"
+      odd: "muss ungerade sein"
+      even: "muss gerade sein"
+      record_invalid: "&Uuml;berpr&uuml;fung fehlgeschlagen: %{errors}"
+      invalid_date: "kein g&uuml;ltiges Datum"
+      invalid_time: "keine g&uuml;ltige Zeit"
+      invalid_datetime: "ung&uuml;ltig"
+      is_at: "muss genau %{restriction} sein"
+      before: "muss vor %{restriction} sein"
+      on_or_before: "muss gleich oder vor %{restriction} sein"
+      after: "muss anch %{restriction} sein"
+      on_or_after: "muss gleich oder nach %{restriction} sein"
+      between: "muss zwischen %{earliest} undnd %{latest} sein"
         
   ## misc
   
