needed/offered changed

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -476,7 +476,9 @@ de:
     goods: "G&uuml;ter"
     services: "Dienste"
     transports: "Transporte"
-    ideas: "Ideen"
+    ideas: "Ideen"          
+    knowledge: "Wissen"
+    skills: "F&auml;higkeiten"
     sharingpoints: "Sammelstellen"
     status: "Status"
     onHold: "wartend"
