--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -476,7 +476,9 @@ en:
     goods: "Goods"
     services: "Services"
     transports: "Transports"
-    ideas: "Ideas"
+    ideas: "Ideas" 
+    knowledge: "Knowledge"
+    skills: "Skills"
     sharingpoints: "Sharingpoints" 
     status: "Status"
     onHold: "on hold"
