fixed meetup.users in _form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -651,7 +651,9 @@ en:
   formtastic: 
     labels:
       meetup:
-        title: "Title"  
+        title: "Title"
+        description: "Description" 
+        users: "Participants"    
       item:
         title: "Title"  
         description: "Description"
