ping index fixed for pings & inverse pings

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -700,7 +700,12 @@ en:
     location: "Location"
     title: "Title"  
     user: "Username"
-    joined: "Date"  
+    joined: "Date"
+    
+  ## will_paginate
+  will_paginate:
+     next_label: ">>"
+     previous_label: "<<"
    
   ## activerecord
   
