--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -15,8 +15,8 @@ de:
       only_day: "%e"
     day_names: [Sonntag, Montag, Dienstag, Mittwoch, Donnerstag, Freitag, Samstag]
     abbr_day_names: [So, Mo, Di, Mi, Do, Fr, Sa]
-    month_names: [~, Januar, Februar, März, April, Mai, Juni, Juli, August, September, Oktober, November, Dezember]
-    abbr_month_names: [~, Jan, Feb, Mär, Apr, Mai, Jun, Jul, Aug, Sep, Okt, Nov, Dez]
+    month_names: [~, Januar, Februar, Mï¿½rz, April, Mai, Juni, Juli, August, September, Oktober, November, Dezember]
+    abbr_month_names: [~, Jan, Feb, Mï¿½r, Apr, Mai, Jun, Jul, Aug, Sep, Okt, Nov, Dez]
     order: [ :day, :month, :year ]
 
   time:
@@ -366,7 +366,7 @@ de:
     friendships:
       create:
         notice: "Freundschaft erfolgreich gebildet."
-        error: "Es war nicht möglich die Freundschaft aufzubauen (technisch...)"
+        error: "Es war nicht mï¿½glich die Freundschaft aufzubauen (technisch...)"
       destroy:
         notice: "Freundschaft gel&ouml;st."
       accept:
@@ -703,7 +703,12 @@ de:
     location: "Ort"
     user: "Name"
     joined: "Datum"
-    
+  
+  ## will_paginate
+  will_paginate:
+     next_label: ">>"
+     previous_label: "<<"
+     
   ## activemodel
   
  # activerecord:
