--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -673,6 +673,10 @@ en:
         amount: "Amount"
         measure: "Measure" 
         tag_list: "Tags"
+      group:
+        title: "Title"  
+        description: "Description"
+        tag_list: "Tags"
       event:
         from: "from"
         till: "till"
