added tags and locations to group

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -535,6 +535,12 @@ de:
   events:
     ressource: "Resource"
     description: "Beschreibung"
+
+  ## groups
+  groups:
+    ressource: "Resource"
+    description: "Beschreibung"
+    holder: "Verwalter"
   
   ## friendships
   
