--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -65,8 +65,8 @@ de:
         one: 'mehr als 1 Jahr'
         other: '%{count} Jahre'
       almost_x_years:
-        one:   "fast 1 year"
-        other: "fasr %{count} years"
+        one:   "fast 1 Jahr"
+        other: "fast %{count} Jahre"
     prompts:
       year:   "Jahr"
       month:  "Monat"
