audits on comments and pings part I

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -238,12 +238,20 @@ de:
   accepted_at: "akzeptiert am"
   follow: "Folgen"
   hasUpdated: "hat ge&auml;ndert"
-  hasUpdatedAGroup: "hat eine Gruppe ge&auml;ndert"
-  hasUpdatedALocation: "hat einen Ort ge&auml;ndert"
+  hasUpdatedAnItem: "hat '%{title}' ge&auml;ndert"
+  hasUpdatedAGroup: "hat die Gruppe '%{title}' ge&auml;ndert"
+  hasUpdatedALocation: "hat den Ort f&uuml;r '%{title}' ge&auml;ndert"
   hasUpdatedtheUserdetails: "hat ihre/seine Userdaten ge&auml;ndert"
   hasCreated: "hat erstellt"
-  hasCreatedAGroup: "hat eine Gruppe erstellt"
-  hasCreatedALocation: "hat einen Ort gespeichert"
+  hasCreatedANeed: "braucht '%{title}'"
+  hasCreatedAnOffer: "bietet '%{title}' an"
+  hasCreatedAGroup: "hat die Gruppe '%{title}' er&oumlffnet"
+  hasCreatedALocation: "hat den Ort f&uuml;r '%{title}' gespeichert"
+  hasPingedOn: "hat '%{title}' angepingt"
+  usersPingsIsAccepted: "ihr/sein Ping auf '%{title}' wurde akzeptiert"
+  usersPingsIsDeclined: "ihr/sein Ping auf '%{title}' wurde abgelehnt"
+  usersPingsIsClosed: "ihr/sein Ping auf '%{title}' wurde geschlossen"
+  hasCommentedOn: "hat '%{title}' kommentiert"
   hasDeleted: "hat gel&ouml;scht"
   activity: "Aktivit&auml;ten"
 
