--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -237,12 +237,20 @@ en:
   accepted_at: "accepted on"
   follow: "follow"
   hasUpdated: "has updated"
-  hasUpdatedAGroup: "has updated a group"
-  hasUpdatedALocation: "has updated a location"
+  hasUpdatedAnItem: "has upated '%{title}'"
+  hasUpdatedAGroup: "has updated the group '%{title}'"
+  hasUpdatedALocation: "has updated the location of '%{title}'"
   hasUpdatedtheUserdetails: "has updated her/his userdetails"
   hasCreated: "has created"
-  hasCreatedALocation: "has saved a location"
-  hasCreatedAGroup: "has created a group"
+  hasCreatedANeed: "needs '%{title}'"
+  hasCreatedAnOffer: "offers '%{title}'"
+  hasCreatedALocation: "has set the location for '%{title}'"
+  hasCreatedAGroup: "has created the group '%{title}'"
+  hasPingedOn: "has pinged on '%{title}'"
+  usersPingsIsAccepted: "her/his Ping on '%{title}' is accepted"
+  usersPingsIsDeclined: "her/his Ping on '%{title}' is declined"
+  usersPingsIsClosed: "her/his Ping on '%{title}' is closed"
+  hasCommentedOn: "has commented '%{title}'"
   hasDeleted: "has deleted"
   activity: "Activity"
 
