Added meetups to activity-stream, friendly ids to items & meetups

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -238,19 +238,21 @@ de:
   accepted_at: "akzeptiert am"
   follow: "Folgen"
   hasUpdated: "hat ge&auml;ndert"
+  hasUpdatedAMeetup: "hat den Treffpunkt '%{title}' ge&auml;ndert"
   hasUpdatedAnItem: "hat '%{title}' ge&auml;ndert"
   hasUpdatedAGroup: "hat die Gruppe '%{title}' ge&auml;ndert"
   hasUpdatedALocation: "hat den Ort f&uuml;r '%{title}' ge&auml;ndert"
   hasUpdatedtheUserdetails: "hat ihre/seine Userdaten ge&auml;ndert"
   hasCreated: "hat erstellt"
+  hasCreatedAMeetup: "hat den Treffpunkt '%{title}' er&ouml;ffnet"
   hasCreatedANeed: "braucht '%{title}'"
   hasCreatedAnOffer: "bietet '%{title}' an"
   hasCreatedAGroup: "hat die Gruppe '%{title}' er&oumlffnet"
   hasCreatedALocation: "hat den Ort f&uuml;r '%{title}' gespeichert"
   hasPingedOn: "hat '%{title}' angepingt"
-  usersPingsIsAccepted: "ihr/sein Ping auf '%{title}' wurde akzeptiert"
-  usersPingsIsDeclined: "ihr/sein Ping auf '%{title}' wurde abgelehnt"
-  usersPingsIsClosed: "ihr/sein Ping auf '%{title}' wurde geschlossen"
+  usersPingIsAccepted: "akzeptiert Ping auf '%{title}'"
+  usersPingIsDeclined: "lehnt Ping auf '%{title}' ab"
+  usersPingIsClosed: "schliesst Ping auf '%{title}'"
   hasCommentedOn: "hat '%{title}' kommentiert"
   hasDeleted: "hat gel&ouml;scht"
   activity: "Aktivit&auml;ten"
