--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -237,19 +237,21 @@ en:
   accepted_at: "accepted on"
   follow: "follow"
   hasUpdated: "has updated"
-  hasUpdatedAnItem: "has upated '%{title}'"
+  hasUpdatedAMeetup: "has updated the meetup '%{title}'"
+  hasUpdatedAnItem: "has updated '%{title}'"
   hasUpdatedAGroup: "has updated the group '%{title}'"
   hasUpdatedALocation: "has updated the location of '%{title}'"
   hasUpdatedtheUserdetails: "has updated her/his userdetails"
   hasCreated: "has created"
+  hasCreatedAMeetup: "has opened the meetup '%{title}'"
   hasCreatedANeed: "needs '%{title}'"
   hasCreatedAnOffer: "offers '%{title}'"
   hasCreatedALocation: "has set the location for '%{title}'"
   hasCreatedAGroup: "has created the group '%{title}'"
   hasPingedOn: "has pinged on '%{title}'"
-  usersPingsIsAccepted: "her/his Ping on '%{title}' is accepted"
-  usersPingsIsDeclined: "her/his Ping on '%{title}' is declined"
-  usersPingsIsClosed: "her/his Ping on '%{title}' is closed"
+  usersPingIsAccepted: "accepted Ping on '%{title}'"
+  usersPingIsDeclined: "declined Ping on '%{title}'"
+  usersPingIsClosed: "closed Ping on '%{title}'"
   hasCommentedOn: "has commented '%{title}'"
   hasDeleted: "has deleted"
   activity: "Activity"
